hyperflexsizer-NewVersions/cae_deployment_yaml_scripts/cae_stage_yaml_scripts/hxsizerstage-stg-ext-rtp-sizer-stage.yaml
kind: "Service"
apiVersion: "v1"
metadata:
  name: "hxsizerstage-stg-ext-rtp-svc"
spec:
  ports:
    -
      name: "web"
      protocol: "TCP"
      port: 8080
  selector:
    name: "hxsizerstage-stg-ext-rtp"
  type: "ClusterIP"
  sessionAffinity: "None"
---
kind: "Deployment"
apiVersion: "apps/v1beta1"
metadata:
  name: "hxsizerstage-stg-ext-rtp"
spec:
  template:
    metadata:
      labels:
        name: "hxsizerstage-stg-ext-rtp"
      annotations:
        app_version: 'latest'
    spec:
      containers:
        -
          name: "hxsizerstage-stg-ext-rtp"
          image: "containers.cisco.com/savramap/hxsizer_stage:latest"
          ports:
            -
              containerPort: 8080
              protocol: "TCP"
          resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 200m
          volumeMounts:
            -
              name: podinfo
              mountPath: /etc/metadata
              readOnly: false
            -
              name: hxsizerstage-stg-ext-rtp-volume-1
              mountPath: /var/log/httpd24
            - 
              name: hxsizerstage-stg-ext-rtp-volume-2
              mountPath: /var/www

          imagePullSecrets:
            - name: savramap-hxsizer-robot-pull-secret

          imagePullPolicy: "IfNotPresent"
          securityContext:
            capabilities: {}
            privileged: false
          #readinessProbe:
          #  httpGet:
          #    path: "/"
          #    port: 8080
          #  initialDelaySeconds: 15
          #  timeoutSeconds: 1
          #livenessProbe:
          #  exec:
          #    command:
          #      - "/bin/true"
          #  initialDelaySeconds: 15
          #  timeoutSeconds: 1
      volumes:
        -
          name: podinfo
          downwardAPI:
            items:
              -
                path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
              -
                path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
        -
          name: hxsizerstage-stg-ext-rtp-volume-1
          emptyDir: {}
        -
          name: hxsizerstage-stg-ext-rtp-volume-2
          emptyDir: {}
   
      restartPolicy: "Always"
      dnsPolicy: "ClusterFirst"
  replicas: 2
  triggers:
    -
      type: "ConfigChange"
  strategy:
    type: "RollingUpdate"
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 120
